--- a/css/menucss.css
+++ b/css/menucss.css
@@ -14,6 +14,7 @@ background: linear-gradient(#275670, #122B41);
 	height: 75px;
 	width: 100%;
 	position: fixed;
+	z-index: 1000;
 	top: 0px;
 	}
 
